--- a/style.css
+++ b/style.css
@@ -1,21 +1,80 @@
-body{
-    background-color: #638a79;
-    background-image: url("img/body-bg.png");
-    background-repeat: repeat-x;
-    background-position: fixed;
+body {
+	background-color: #638a79;
+	background-image: url("img/body-bg.png");
+	background-repeat: repeat-x;
+	background-attachment: fixed;
+	font-size: 13рх;
+	line-height: 18рх;
+	color: #333;
+	font-family: Arial;
+	}
+// div {
+// 	border: 1px solid red;
+// 	}
+.content {
+	width: 840px;
+	margin: 100px auto 0;
+	background-color: #fff;
+	}
+.content .content-top {
+	height: 12px;
+	background-image: url("img/content-bg.png");
+	background-position: 0px 0px;
+	}
+.content .content-bottom {
+	height: 12px;
+	background-image: url("img/content-bg.png");
+	background-position: 840px 0px;
+	}
+.content .content-middle {
+	padding: 20px 30px;
+	}
+h1 {
+	font-size: 26рх;
+	line-height: 36рх;
+	color: #2b8c57;
+	font-weight: normal;
+	margin-bottom: 10рх;
+	}
+h2 {
+	font-size: 18рх;
+	line-height: 28рх;
+	color: #2b8c57;
+	font-style: italic;
+	font-weight: normal;
+	margin: 30px 0 15px 0;
+ 	}
+div.block-1 {
+	background-color: #2b8c57;
+	color: #fff;
+	font-style: italic;
+	font-size: 12рх;
+	padding: 20px 30px;
+	background-image: url("img/block-1-bg.png");
+	background-repeat: repeat-x;
+	}
+div.block-2 {
+	background-color: #356149;
+	color: #fff;
+	font-style: italic;
+	font-size: 12рх;
+	padding: 20px 30px;
+	background-image: url("img/picture-1.png");
+	background-position: right bottom;
+	background-repeat: no-repeat;
+	}
+a.button {
+	display:block;
+	height: 38px; 
+	wight: 121px;
+	text-decoration:none;
+	background-image: url("img/button-1.png");
+	background-repeat: no-repeat;
+	background-position: 0px 0px;
 }
-
-.content {}
-.content .content-top {}
-.content .content-bottom {}
-.content .content-middle {}
-	
-h1 { }
-h2 { }
-	
-div.block-1 {}
-div.block-2 {}
-
-a.button {}
-a.button:hover {}
-a.button:active {}
+a.button:hover {
+	background-position: 0px -38px;
+}
+a.button:active {
+	background-position: 0px -76px;
+}
